# hvamp

./: hvamp.cabal
Sound/Analysis/: Vamp.hs
Sound/Analysis/Vamp/: ApiVersion.hs  Category.hs  DynamicLinker.hs  Feature.hs  OutputDescriptor.hs  ParameterDescriptor.hs  Path.hs  Plugin.hs  PluginDescriptor.hs  TimeStamp.hs  Types.hs
Sound/Analysis/Vamp/DynamicLinker/: Posix.hs  Win32.hs
Sound/Analysis/Vamp/PluginDescriptor/: Handle.hs
